manifests/base/edu-user/deployment.yaml
# edu-user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-user-deployment
  namespace: edu-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edu-user
  template:
    metadata:
      labels:
        app: edu-user
    spec:
      containers:
        - name: edu-user-container
          image: your-user-image:tag
          ports:
            - containerPort: 8080
