manifests/base/edu-user/service.yaml
# edu-user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edu-user-service
  namespace: edu-user
spec:
  selector:
    app: edu-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer  # 외부 접근을 위해 LoadBalancer 설정
