manifests/base/edu-user/ingress.yaml
# edu-user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-user-ingress
  namespace: edu-user
#  annotations:
#  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: edu-user.211.254.212.155.sslip.io
      http:
        paths:
          - path: /api/v1/user/{userNo}
            pathType: Prefix
            backend:
              service:
                name: edu-user-service
                port:
                  number: 30001
